--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "itmo-web-2",
   "version": "0.0.1",
-  "description": "",
+  "description": "Labs for Web development course at ITMO University (IS, 6 sem)",
   "author": "Nikolay Fedotenko <kalkolay@protonmail.com> (https://kalkolay.github.io/ITMO-WEB/)",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -25,6 +25,8 @@
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "express": "^4.17.2",
+    "hbs": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
