--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,4 @@ jobs:
         PORT: ${{ secrets.PORT }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+#    - run: npm test
