--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Labs for Web development course at ITMO University (IS, 6 sem)",
   "author": "Nikolay Fedotenko <kalkolay@protonmail.com> (https://kalkolay.github.io/ITMO-WEB/)",
   "private": true,
-  "license":"MIT",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.11.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
     "hbs": "^4.2.0",
