--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.2",
+    "firebase": "^9.8.1",
     "firebase-admin": "^10.1.0",
     "firebaseui": "^6.0.1",
     "hbs": "^4.2.0",
