--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/websockets": "^8.4.4",
     "@prisma/client": "^3.11.0",
+    "@types/socket.io": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
